force-app/main/default/objects/Real_Estate_Management__c/Real_Estate_Management__c.object-meta.xml
<CustomObject>
    <label>Real Estate Management</label>
    <nameField>
        <label>Real Estate Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Estate Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>