force-app/main/default/objects/Real_Estate_Management__c/fields/Lease_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Lease_Agreement__c</fullName>
    <label>Lease Agreement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>