force-app/main/default/objects/Real_Estate_Management__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>Maintenance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>