force-app/main/default/objects/Real_Estate_Management__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <length>30</length>
    <type>Text</type>
</CustomField>